--- a/app/src/main/res/drawable/layout_idcard.xml
+++ b/app/src/main/res/drawable/layout_idcard.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#A68B73"/>
+            <solid android:color="#2B3880"/>
             <corners android:radius="25dp"/>
             <stroke android:color="#CCCCCC" android:width="1dp" />
         </shape>
