--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,37 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/lightgray"
-    android:theme="@style/ThemeGURU2">
+    android:theme="@style/ThemeGURU2"
+    tools:context=".MainActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#120B0B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <FrameLayout
+            android:id="@+id/mainback"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/mainback">
+
+        </FrameLayout>
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="160dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
+        android:layout_width="279dp"
+        android:layout_height="259dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="90dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/symbol" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/symbol_letter" />
+        app:srcCompat="@drawable/mainlogo" />
 
     <LinearLayout
         android:id="@+id/linearLayout6"
@@ -120,7 +121,7 @@
                 android:layout_weight="1"
                 android:text="로그인"
                 android:textColor="#FFFFFF"
-                app:backgroundTint="#404040" />
+                app:backgroundTint="#2B3880" />
 
             <Button
                 android:id="@+id/btnLogin2"
@@ -129,7 +130,7 @@
                 android:layout_weight="1"
                 android:text="관리자로그인"
                 android:textColor="#FFFFFF"
-                app:backgroundTint="#404040" />
+                app:backgroundTint="#2B3880" />
         </LinearLayout>
     </LinearLayout>
 
