admin_read_card

--- a/app/src/main/res/layout/activity_admin_read_card.xml
+++ b/app/src/main/res/layout/activity_admin_read_card.xml
@@ -5,123 +5,163 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    android:background="@color/lightgray"
     android:theme="@style/ThemeGURU2"
     tools:context=".idcard">
 
 
-    <ImageView
-        android:id="@+id/ImgView"
-        android:layout_width="180dp"
-        android:layout_height="210dp"
-        android:layout_marginTop="48dp"
-        android:padding="20dp"
-        android:scaleType="centerCrop"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="386dp"
+        android:layout_height="240dp"
+        android:background="@drawable/layou_shape"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.64"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/person" />
+        app:layout_constraintVertical_bias="0.096">
 
-    <TextView
-        android:id="@+id/tvMajor"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="학과"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvId"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvId"
-        app:layout_constraintTop_toBottomOf="@+id/tvId" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvDepart"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="학부"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvMajor"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvMajor"
-        app:layout_constraintTop_toBottomOf="@+id/tvMajor" />
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="8dp"
+                android:padding="10dp"
+                android:text="이름"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/tvMajor"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:padding="10dp"
-        android:text="이름"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvId"
-        app:layout_constraintEnd_toEndOf="@+id/money"
-        app:layout_constraintHorizontal_bias="0.651"
-        app:layout_constraintStart_toStartOf="@+id/money"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/tvDepart"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:padding="10dp"
+                android:text="학부"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvMajor" />
 
-    <TextView
-        android:id="@+id/tvId"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="학번"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvMajor"
-        app:layout_constraintEnd_toEndOf="@+id/money"
-        app:layout_constraintHorizontal_bias="0.645"
-        app:layout_constraintStart_toStartOf="@+id/money"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98" />
+            <TextView
+                android:id="@+id/tvId"
+                android:layout_width="182dp"
+                android:layout_height="42dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="4dp"
+                android:padding="10dp"
+                android:text="학번"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/tvName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/ImgView"
+                android:layout_width="180dp"
+                android:layout_height="213dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toStartOf="@+id/tvName"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/person" />
+
+            <TextView
+                android:id="@+id/tvMajor"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:padding="10dp"
+                android:text="학과"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="297dp"
+                android:layout_height="281dp"
+                android:layout_marginTop="280dp"
+                android:layout_marginEnd="57dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/logo_opacity" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
     <Button
         android:id="@+id/btnReceive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="99dp"
         android:text="참여"
         android:textColor="#FFFFFF"
-        app:backgroundTint="#404040"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/participate" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="61dp"
         android:text="행사 참여 여부 : "
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="@+id/tvDue"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnReceive" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDue" />
 
     <TextView
         android:id="@+id/tvDue"
-        android:layout_width="115dp"
-        android:layout_height="20dp"
+        android:layout_width="220dp"
+        android:layout_height="35dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="4dp"
         android:text="학생회비 납부 여부:"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
     <TextView
         android:id="@+id/participate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="null"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/money"
         app:layout_constraintStart_toStartOf="@+id/money"
@@ -134,10 +174,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:text="null"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvDue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.878"
         app:layout_constraintStart_toEndOf="@+id/tvDue"
         app:layout_constraintTop_toTopOf="@+id/tvDue" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
