--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,38 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:theme="@style/ThemeGURU2"
     tools:context=".MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#120B0B"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@drawable/background">
 
-        <FrameLayout
-            android:id="@+id/mainback"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/mainback">
-
-        </FrameLayout>
     </FrameLayout>
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="279dp"
-        android:layout_height="259dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="90dp"
+        android:id="@+id/imageView4"
+        android:layout_width="230dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mainlogo" />
+        app:srcCompat="@drawable/whitesmartcampus" />
 
     <LinearLayout
         android:id="@+id/linearLayout6"
@@ -120,8 +111,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:text="로그인"
-                android:textColor="#FFFFFF"
-                app:backgroundTint="#2B3880" />
+                android:textColor="@color/black"
+                app:backgroundTint="#99FFFFFF" />
 
             <Button
                 android:id="@+id/btnLogin2"
@@ -129,8 +120,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="관리자로그인"
-                android:textColor="#FFFFFF"
-                app:backgroundTint="#2B3880" />
+                android:textColor="@color/black"
+                app:backgroundTint="#99FFFFFF" />
         </LinearLayout>
     </LinearLayout>
 
