--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -55,6 +55,17 @@
             android:layout_marginTop="75dp">
 
             <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="314dp"
+                android:layout_height="445dp"
+                android:padding="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/blur2" />
+
+            <ImageView
                 android:id="@+id/imgProfile"
                 android:layout_width="180dp"
                 android:layout_height="210dp"
@@ -76,6 +87,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/tvId"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
@@ -89,6 +101,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/tvMajor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvName" />
@@ -102,6 +115,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/tvDepart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvId" />
@@ -110,24 +124,16 @@
                 android:id="@+id/tvDepart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:padding="10dp"
                 android:text="학부"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvMajor" />
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="314dp"
-                android:layout_height="445dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/blur2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
