--- a/app/src/main/res/layout/activity_admin_read_card.xml
+++ b/app/src/main/res/layout/activity_admin_read_card.xml
@@ -13,8 +13,10 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="386dp"
+        android:layout_width="350dp"
         android:layout_height="240dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/layou_shape"
         android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,17 +67,19 @@
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <ImageView
                 android:id="@+id/ImgView"
-                android:layout_width="180dp"
-                android:layout_height="213dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
+                android:layout_width="161dp"
+                android:layout_height="197dp"
+                android:layout_marginTop="16dp"
                 android:padding="20dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toStartOf="@+id/tvName"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/person" />
 
@@ -106,9 +110,12 @@
                 android:id="@+id/imageView8"
                 android:layout_width="297dp"
                 android:layout_height="281dp"
+                android:layout_marginStart="57dp"
                 android:layout_marginTop="280dp"
                 android:layout_marginEnd="57dp"
+                android:background="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/logo_opacity" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -129,12 +136,13 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="61dp"
         android:text="행사 참여 여부 : "
-        android:textSize="25dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/tvDue"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,13 +151,14 @@
     <TextView
         android:id="@+id/tvDue"
         android:layout_width="220dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="4dp"
         android:text="학생회비 납부 여부:"
-        android:textSize="25dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
