--- a/app/src/main/res/layout/activity_attend_confirm.xml
+++ b/app/src/main/res/layout/activity_attend_confirm.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
-
+<!--
         <TextView
             android:id="@+id/tvProfessor"
             android:layout_width="100dp"
@@ -25,11 +25,18 @@
             android:background="@drawable/edge_bottom"
             android:text="교수님 성함"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="20dp" />-->
+
+        <Spinner
+            android:id="@+id/profSpinner"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="5dp" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="175dp"
+            android:layout_width="162dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="5dp"/>
